--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <title>Zakari L. Billo</title>
 
-<script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.30/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
@@ -304,9 +304,9 @@ $(document).ready(function () {
 </div>
 <div class="profile-text">
 <p>
-<p>I am an Epidemiology MPH candidate (’26) at <strong>Columbia
-University Mailman School of Public Health</strong>, applying to
-Biostatistics PhD programs for Fall 2026.</p>
+<p>I am a Epidemiology Master of Public Health candidate (’26) at the
+<strong>Columbia University Mailman School of Public Health</strong>,
+applying to Biostatistics PhD programs for Fall 2026.</p>
 <p>My work is on <strong>graphical models</strong> for <strong>causal
 inference</strong>: <strong>structure learning</strong>, <strong>complex
 networks</strong>, and <strong>algorithmic fairness</strong>. Interests
@@ -319,7 +319,7 @@ mitigation. I conduct research under the supervision of
 
 <hr>
 <p style="text-align: center; color: #888;">
-  © 2025 Zakari L. Billo
+  © 2026 Zakari L. Billo
 </p>
 <style>
   /* General styling for the particle container */
